fix(style): remove useless grid prefix on gap properties

--- a/packages/ods-react/src/style/_badge.scss
+++ b/packages/ods-react/src/style/_badge.scss
@@ -6,7 +6,7 @@ $ods-badge-height-lg: 28px;
   box-sizing: border-box;
   display: inline-flex;
   flex-flow: row;
-  grid-gap: 0.25rem;
+  gap: 0.25rem;
   align-items: center;
   border-radius: var(--ods-border-radius-sm);
   color: var(--ods-color-primary-900);
